1. Deleted README.rtf replaced with README.txt 2. Changed the CSS to override the original admin menu CSS, so that it fixes the margin on the top of the page globally, added letter spacing to keep the text in it's container 3. Added todo to get hover intent to work better - it is very buggy right now. 4. For some reason my git repo was not looking at the files correctly, so I fixed that.

--- a/css/alt.admin-menu.css
+++ b/css/alt.admin-menu.css
@@ -1,10 +1,14 @@
 /* $Id: admin_menu_alt.css,v 1.11 2008/09/08 10:12:04 frjo Exp $ */
 
-/* Alternative Admin menu CSS by Fredrik Jonsson fredrik at combonet dot se */
+/* Alternative Admin menu CSS by Paul Huntsberger paul@bluetent.com */
+
+body.admin-menu {
+margin-top:40px !important;
+}
 
 /* Admin menu */
 #admin-menu li {
-  letter-spacing:1px;
+  letter-spacing:1px !important;
   width:85px;
 }
 
